# pierogis

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  build_wheels.sh  build_wheels_mac_arm.sh  build_wheels_manylinux.sh  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  test.sh
.github/workflows/: ci.yml  publish-dev.yml  publish.yml  python-publish.yml  python-test.yml  test.yml  upload.yml  workflow.yml
demo/: examples.py  pierogi.py  recipe.txt  sort_quantize_animation.py  teton_recipe.txt
docs/: Makefile  api.rst  cli.rst  conf.py  examples.rst  index.html  index.rst  ingredients.rst  kitchen.rst  menu.rst  pyrogis.html  requirements.txt
docs/api/: modules.rst  pyrogis.ingredients.rst  pyrogis.ingredients.seasonings.rst  pyrogis.kitchen.menu.rst  pyrogis.kitchen.rst  pyrogis.rst
docs/menu/: crop.rst  crop_table.csv  custom.rst  index.rst  mmpx.rst  quantize.rst  resize.rst  rotate.rst  sort.rst  threshold.rst
pierogis/: __init__.py  __main__.py  dish.py  ingredient.py  interval.py  mix.py  pierogi.py  pixel.py  quantize.py  recipe.py  seasoning.py  sort.py  swap.py  threshold.py
src/: kitchen.rs  lib.rs  pymodule.rs  quantize.rs
src/pierogis/: __init__.py  __main__.py  chef.py  course.py  dish.py  ingredient.py  interval.py  mix.py  pierogi.py  seasoning.py  sort.py  swap.py  threshold.py
src/pyrogis/: __init__.py  __main__.py  chef.py  (+4 more)
tests/: test_base.py  test_chef.py  test_cli.py  test_crop.py  test_dish.py  test_pierogi.py  test_recipe.py  test_resize.py  test_server.py  test_threshold.py
(+124 files in other folders)
